--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
+    "react-tsparticles": "^2.12.2",
     "swiper": "^11.2.10",
+    "tsparticles": "^3.9.1",
+    "tsparticles-slim": "^2.12.0",
     "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
